# RangesLike

./: CMakeLists.txt  Filter.h  Makefile  Map.h  README.md  Reduce.h  Sort.h  main.cpp
